Fix spacing for windows

--- a/style.css
+++ b/style.css
@@ -109,13 +109,12 @@ body {
     background-color: rgb(182, 215, 168);
     padding: 0.75rem 1rem;
     border: 2px solid rgb(147, 196, 125);
-    /* border-radius: 18px; */
     border-radius: 1.1rem;
 }
 
 /* Individual window styles */
 #window-about {
-    width: 48vw;
+    width: 49vw;
     height: 88vh;
 }
 
